Normalize nullComparator, customizable with AdhocUnsafe